# redbox

./: .editorconfig  .env.django  .env.example  .env.george  .env.integration  .env.test  .env.uktrade  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_SETUP.md  Dockerfile  LICENCE  Makefile  README.md  config.yml  dex-config.yaml  docker-compose-opensearch.yml  docker-compose.yml  download_embedder.py  index.html  litellm_proxy_config.yml  mkdocs.yml  model_db.py  objects.inv  pyproject.toml  read_local_opensearch.ipynb  requirements.dev.txt  requirements.txt  setup.py  test.py
ai-tests/: README.md  pyproject.toml
ai-tests/tests/: cases.py  conftest.py  test_ai.py  test_gov_call.py
app/workers/embed/: Dockerfile  Makefile  app.py  download_model.py  pyproject.toml  requirements.txt
app/workers/ingest/: Dockerfile  app.py  pyproject.toml  requirements.txt
core-api/: Dockerfile  pyproject.toml
core-api-service/: pyproject.toml
core-api/core_api/: app.py  auth.py  build_chains.py  callbacks.py  dependencies.py  runnables.py  semantic_routes.py
core-api/core_api/retriever/: retrievers.py
core-api/core_api/routes/: chat.py  file.py
core-api/tests/: conftest.py  move_test_ai.py  test_ai.py  test_app.py  test_auth.py  test_runnables.py
core-api/tests/retriever/: test_all_chunks.py  test_parameterised.py
core-api/tests/routes/: test_chat.py  test_file.py
core_api/: Dockerfile  pyproject.toml
core_api/core_api/: build_chains.py  dependencies.py  runnables.py  semantic_routes.py
core_api/core_api/retriever/: retrievers.py
core_api/core_api/routes/: chat.py  file.py
core_api/src/: app.py  auth.py  build_chains.py  callbacks.py  dependencies.py  file.py  format.py  ingest_runnables.py  publisher_handler.py  runnables.py  semantic_router_utils.py  semantic_routes.py  services.py
core_api/src/retriever/: __init__.py  all_chunks.py  base.py  parameterised.py  parameterised_es_retriever.py  queries.py  retrievers.py
core_api/src/routes/: chat.py  file.py  sub_app.py
core_api/tests/: conftest.py  test_ai.py  test_app.py  test_auth.py  test_runnables.py
core_api/tests/retriever/: test_all_chunks.py  test_parameterised.py
core_api/tests/routes/: test_chat.py  test_file.py
django_app/: .editorconfig  Dockerfile  Dockerfile-worker  Makefile  README.md  a.txt  es_add_alias.ipynb  health.sh  manage.py  manifest.yml  package.json  pyproject.toml  setup.cfg  start.sh
django_app/.github/workflows/: checks.yaml  release-prod.yaml  release.yaml
django_app/django_q/: Dockerfile  README.md
django_app/docker/web/: Dockerfile  start.sh
django_app/frontend/: IgnoreAssetResolver.js  i-ai.scss  iai-readme.md  iai.scss  package.json  readme.md  style.css  style.css.map  style.scss
django_app/frontend/js/: alpine.min.js  documents.js  (+5 more)
django_app/redbox_app/: asgi.py  celery.py  context_processors.py  custom_password_validators.py  gunicorn.py  hosting_environment.py  jinja2.py  routing.py  secrets_manager.py  setting_enums.py  settings.py  urls.py  worker.py  wsgi.py
django_app/tests/: conftest.py  test_admin.py  test_consumers.py  test_info_views.py  test_migrations.py  test_models.py  test_ratelimiter.py  test_utils.py  test_views.py
django_app/tests_playwright/: README.md  _settings.py  _signin.py  pages.py  test_accessibility.py  test_chats.py  test_demo.py  test_info_pages.py  test_journey.py
infra/celery/: Dockerfile  pyproject.toml  requirements.txt
notebooks/: Agentic_exp_reliability.ipynb  DOCX.ipynb  ab-scratch.ipynb  agent-experiments.ipynb  agent_test.ipynb  caching.ipynb  chat_log_eda.ipynb  chunk_clustering.py  debug_RB_app.ipynb  demo.ipynb  doctype.ipynb  doctype2.ipynb  elastic_testing.ipynb  email_chunking.ipynb  embed_speed.ipynb  es_add_alias.ipynb  eval_data.ipynb  evaluation.ipynb  hansard_twfy_tool.ipynb  judgement.ipynb  langgraph.ipynb  llm_entity.ipynb  llm_entity_2.ipynb  lmm_handler_rig.ipynb  minio_testing.ipynb  new_spotlight.ipynb  parsing.ipynb  pyproject.toml  quickupload.ipynb  rag.ipynb  rag2.ipynb  rag_runnable.ipynb  sematic_router.ipynb  sequence_and_schema.ipynb  simple_clustering.ipynb  summarisation.ipynb  summarise.ipynb  test.ipynb  token_generation.ipynb  vect_chunk.ipynb
notebooks/evaluation/: Dockerfile  EVALUATION_README.md  README.md  analysis_of_chat_history.py  app.py  chat_log_eda.ipynb  evaluation_dataset_generation.ipynb  mlflow_eval_with_testset.ipynb  mlflow_llm.ipynb  mlflow_rag_test.ipynb  rag_baseline_evaluation.ipynb  rag_create_evaluation_dataset.ipynb  rag_e2e_evaluation.ipynb  rag_experiment_evaluation.ipynb  rag_experiment_evaluation_loop.ipynb  rag_experiment_loop.ipynb  rag_experiments.py  rag_generation_evaluation.ipynb  rag_generation_evalutation.ipynb  rag_optimisation_guide.ipynb  redbox_rag_evaluation.ipynb
notebooks/user_research/: REDBOX-714_contacts_for_user_research.ipynb  policy_profession.ipynb
redbox-analysis/: pyproject.toml
redbox-analysis/route_analysis/: 1_create-dataframe.py  2_identify-routes.py  3_identify-role.py  4_user-analysis.py  5_all-prompt-analysis.py
redbox-analysis/search_data_issue/: 1_chat-analysis.py  2_user-joined.py  3_filter-data.py
redbox-analysis/survey_usage_analysis/: 1_chat-data.py  2_user-data.py  3_survey-data.py  4_joined-survey-django-data.py  5_analysis-joined-data.py  6_analysis-user-prompts.py
redbox-analysis/user_spend/: frequency-and-spend.py
redbox-core/: pyproject.toml  redbox.py
redbox-core/redbox/: __init__.py  app.py  model_db.py  transform.py
redbox-core/tests/: conftest.py  test_ai.py  test_citations.py  test_ingest.py  test_tools.py  test_transform.py
streamlit_app/: Dockerfile  app.py  pyproject.toml  utils.py
streamlit_app/.streamlit/: config.toml
streamlit_app/pages/: 1_Add_Documents.py  2_Ask_the_Box.py  3_Summarise_Documents.py  4_Preview_Files.py  5_Persona_Chat.py
worker/: Dockerfile  download_models.py  pyproject.toml
worker/src/: app.py  model_db.py
worker/tests/: conftest.py  test_app.py
worker/worker/: app.py  download_embedder.py
(+957 files in other folders)
