[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.poetry]
name = "redbox"
version = "1.0.0"
description = "RAG application that uses GenAI to chat with and summarise civil service documents"
authors = ["i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "^2.7.1"
elasticsearch = "^8.14.0"
langchain = "^0.2.5"
tiktoken = "^0.7.0"
boto3 = "^1.34.131"
pydantic-settings = "^2.3.3"
sentence-transformers = "^3.0.1"
unstructured = {version = "0.14.7", extras = ["all-docs"]}
torch = "2.2.2"
semantic-router = "^0.0.48"


[tool.poetry.group.api.dependencies]
fastapi = "^0.111.0"
faststream = {extras = ["redis"], version = "<0.5.0"}
uvicorn = "^0.30.1"
langchain-elasticsearch = "^0.2.0"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
websockets = "^12.0"

[tool.poetry.group.worker.dependencies]
opencv-python-headless = "^4.10.0.84"
nltk = "^3.8.1"
langchain-community = "^0.2.5"

[tool.poetry.group.dev.dependencies]
bumpversion = "^0.6.0"
pytest = "^8.2.2"
pytest-env = "^1.1.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.10"
bandit = "^1.7.9"
detect-secrets = "^1.5.0"
mypy = "^1.9.0"
types-python-dateutil = "^2.9.0.20240315"
types-markdown = "^3.6.0.20240316"
types-pytz = "^2024.1.0.20240203"
pytest-asyncio = "^0.23.6"
boto3-stubs = {extras = ["essential"], version = "^1.34.131"}
moto = {extras = ["s3"], version = "^5.0.5"}
httpx = "^0.27.0"
websockets = "^12.0"
pyarrow = "^16.1.0"
deepeval = "^0.21.57"
minio = "^7.2.7"
python-jose="^3.3.0"
jsonlines="^4.0.0"
ipywidgets="^8.1.2"
playwright = "^1.43"
pytest-playwright = "^0.5"
axe-playwright-python = "^0.1"


[tool.poetry.group.ai.dependencies]
anthropic = "^0.29.0"
litellm = "^1.40.21"
openai = "^1.35.3"
langchain-community = "^0.2.5"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.27"
mkdocs-mermaid2-plugin = "^1.1.1"
markdown-mdantic = "^2.1.0"
pygments = "^2.18.0"
mkapi = "^2.1.0"
griffe-typingdoc = "^0.2.5"
mkdocs-git-revision-date-localized-plugin = "^1.2.5"
mkdocs-glightbox = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
download-model = 'download_embedder:download'

[tool.ruff.format]
exclude = ["django_app/redbox_app/redbox_core/migrations/*.py"]

[tool.ruff.lint]
# Dribble in those we have commented out, asterisked ones first
select = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ARG",
    "ASYNC",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "EXE",
    "FURB",
    "ICN",
    "INT",
    "ISC",
    "LOG",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
exclude = ["django_app/redbox_app/redbox_core/migrations/*.py", "out/*"]
ignore = ["COM812", "DJ001", "RET505", "RET508", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "PLR0913", "PLR2004", "TD003", "S311"]
"*/tests/*" = ["S101", "S106", "PLR0913", "PLR2004", "TD003"]
"django_app/tests_playwright/*" = ["S101", "S106", "PLR0913", "PLR2004", "TD003"]
"worker/*" = ["B008"]
"redbox/*" = ["TCH003"]
"redbox/tests/*" = ["ARG001"]
"*/admin.py" = ["RUF012"]
"*/models.py" = ["RUF012"]

[tool.pytest.ini_options]
markers = [
    "incremental: marks tests as incremental (deselect with '-m \"not incremental\"')",
]
