[tool.poetry]
name = "core-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.110.2"
redbox={path="../redbox-core",develop=true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
boto3 = "^1.34.87"
elasticsearch = "^8.13.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
