[tool.poetry]
name = "redbox_app"
version = "0.1.0"
description = ""
authors = ["i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11.2"
django = "^4.2.8"

[tool.poetry.group.django-app.dependencies]
python = "^3.11.2"
django = "^4.2.8"
django-compressor = "^4.4"
django-libsass = "^0.9"
whitenoise = "^6.6.0"
watchdog = {extras = ["watchmedo"], version = "^3.0.0"}
jinja2 = "^3.1.2"
django-environ = "^0.11.2"
django-use-email-as-username = "^1.4.0"
markdown-it-py = "^3.0.0"
waitress = "^2.1.2"
psycopg2-binary = "^2.9.9"
pyyaml = "^6.0.1"
pytz = "^2024.1"
django-permissions-policy = "^4.18.0"
django-csp = "^3.7"
django-single-session = "^0.2.0"
sentry-sdk = "^1.34.0"
django-storages = "^1.14.2"
django-health-check = "<3.19.0" # this pin can be removed once https://github.com/revsys/django-health-check/issues/412 is resolved
boto3 = "^1.34.65"
urllib3 = "<2.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.31.0"
presidio-analyzer = "^2.2.351"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
defusedcsv = "^2.0.0"
python-dotenv = "^1.0.0"
furl = "^2.1.3"
django-allauth = "^0.61.1"
django-otp = "^1.3.0"
humanize = "^4.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-django = "^4.8.0"
pytest-env = "^1.1.1"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pylint = "^3.0.3"
mypy = "^1.9.0"
types-python-dateutil = "^2.9.0.20240315"
types-markdown = "^3.6.0.20240316"
ruff = "^0.3.3"
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.2"
pre-commit = "^3.6.2"
freezegun = "^1.2.2"
pep8-naming = "^0.13.3"
bandit = "^1.7.8"
django-types = "^0.19.1"
types-python-jose = "^3.3.4.8"
detect-secrets = "^1.4.0"
types-pytz = "^2024.1.0.20240203"
boto3-stubs = "^1.34.67"
requests-mock = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
