[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = "RAG application that uses GenAI to chat with and summarise civil service documents"
authors = ["i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"
readme = "../README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
redbox = {path="../redbox-core", develop=true}
worker = {path="../worker", develop=true}
core_api = {path="../core-api", develop=true}
redbox_app = {path="../django-app", develop=true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
boto3-stubs = {extras = ["essential"], version = "^1.34.137"}
moto = {extras = ["s3"], version = "^5.0.10"}
ipykernel = "^6.29.5"
pandas = "^2.2.2"
dj-notebook = "^0.7.0"
django = "^5.0.7"
jsonlines = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
