[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.poetry]
name = "redbox"
version = "0.4.0"
description = "RAG application that uses GenAI to chat with and summarise civil service documents"
authors = ["i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.7.1"
elasticsearch = "^8.14.0"
langchain = "^0.2.6"
langchain_openai = "^0.1.9"
tiktoken = "^0.7.0"
boto3 = "^1.34.136"
pydantic-settings = "^2.3.4"
torch = "2.2.2"
langchain-elasticsearch = "^0.2.2"
kneed = "^0.8.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
moto = "^5.0.10"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
