[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.poetry]
name = "redbox"
version = "0.4.0"
description = "RAG application that uses GenAI to chat with and summarise civil service documents"
authors = ["i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.7.1"
elasticsearch = "^8.14.0"
langchain-community = "^0.2.11"
langchain = "^0.2.12"
langchain_openai = "^0.1.20"
tiktoken = "^0.7.0"
boto3 = "^1.34.157"
pydantic-settings = "^2.3.4"
langchain-elasticsearch = "^0.2.2"
pytest-dotenv = "^0.5.2"
kneed = "^0.8.5"
langgraph = "^0.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
moto = "^5.0.12"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
jsonlines = "^4.0.0"
deepeval = "^0.21.74"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
env_override_existing_values = 1
env_files = [
    ".env.test",
    ".env"
]
markers = [
    "ai: marks tests as using a live LLM (deselect with '-m \"not ai\"')"
]

