[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.poetry]
name = "redbox"
version = "0.4.0"
description = "RAG application that uses GenAI to chat with and summarise civil service documents"
authors = ["i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.7.1"
langchain-community = ">0.2.12"
langchain = "^0.3.4"
langchain_openai = ">0.1.21"
tiktoken = "^0.7.0"
pydantic-settings = "^2.3.4"
langchain-aws = "^0.2.3"
litellm = "^1.63.3"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
env_override_existing_values = 1
env_files = [
    "tests/.env.test",
    ".env"
]
markers = [
    "ai: marks tests as using a live LLM (deselect with '-m \"not ai\"')",
    "vcr",
]
