[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.poetry]
name = "worker"
version = "0.3.0"
description = "RAG application that uses GenAI to chat with and summarise civil service documents"
authors = ["i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]
license = "MIT"
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
redbox = {path="../redbox-core", develop=true}
langchain = "^0.2.6"
langchain-elasticsearch = "^0.2.2"
elasticsearch = "^8.14.0"
opencv-python-headless = "^4.10.0.84"
pillow-heif = "^0.16.0"
faststream = {extras = ["redis"], version = "<0.5.0"}
nltk = "^3.8.1"
pikepdf = "<9.0.0"
torch = "2.2.2"
unstructured = {version = "<0.14.9", extras = ["all-docs"]}
unstructured-inference = "^0.7.36"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.6"
boto3-stubs = {extras = ["essential"], version = "^1.34.137"}
moto = {extras = ["s3"], version = "^5.0.10"}
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
env_override_existing_values = 1
env_files = [
    ".env.test",
    ".env"
]
