[tool.poetry]
name = "redbox-copilot-embed"
version = "0.1.0"
description = ""
authors = ["i.AI <i-dot-ai-team@cabinetoffice.gov.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^2.3.1"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
